--- a/manifest-v2.yml
+++ b/manifest-v2.yml
@@ -4,7 +4,7 @@ applications:
   memory: 1GB
   instances: 1
   random-route: true
-  path: target/pcf-ers-demo-2.0.jar
+  path: target/pcf-ers-demo1-0.0.1-SNAPSHOT.jar
 #  buildpack: java_buildpack
   services: []
   env:
