--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
 - name: attendees
-  memory: 768M
+  memory: 1G
   instances: 1
   random-route: true
   path: target/pcf-ers-demo1-0.0.1-SNAPSHOT.jar
